--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,11 @@
 fastapi
 uvicorn
-langchain
-langchain-community
-langchain-openai
-chromadb
-pydantic
 python-multipart
-langchain-ollama
+pydantic
+langchain==0.2.16
+langchain-community==0.2.16
+langchain-core==0.2.38
+langchain-ollama==0.1.3
+langchain-chroma==0.1.4
+chromadb
 pypdf
-langchain-chroma
