--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,9 @@ services:
       - "8000:8000"
     volumes:
       - ./backend:/app  # Hot-reload: cambios en código se reflejan al instante
+    env_file:
+      - .env
     environment:
-      - OPENAI_API_KEY=${OPENAI_API_KEY}
       - CHROMA_DB_URL=http://vector_db:8000
     depends_on:
       - vector_db
